--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "",
   "main": "index.js",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
@@ -15,8 +16,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.21",
+    "react-redux": "^9.1.0",
     "swagger-ui-express": "^4.1.4",
-    "yamljs": "^0.3.0"
+    "yamljs": "^0.3.0",
+    "zod": "^3.22.4"
   },
   "scripts": {
     "dev:server": "nodemon ./server/server.js",
